--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
   },
   "name": "react-intuitive-components",
   "author": "asandu.cristian@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/asanducristian/react-intuitive-ui.git"
+  },
+  "homepage": "https://github.com/asanducristian/react-intuitive-ui",
   "module": "dist/react-intuitive-components.esm.js",
   "size-limit": [
     {
